<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@id/background_frame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="right">
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/colorPrimary">

        <!--Backdrop back layer-->
        <LinearLayout
            android:id="@+id/background_frame_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="0dp"
            android:padding="10dp">


        </LinearLayout>

        <!--Backdrop first layer  -->
        <com.keiken.view.backdrop.BackdropFrontLayer
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="1dp"
            app:layout_behavior="com.keiken.view.backdrop.BackdropFrontLayerBehavior">

            <!--Layer subheader-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:background="@drawable/backdrop_background"
                app:behavior_peekHeight="56dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Modifica Profilo"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/up_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/white_to_black_up_arrow"
                        android:layout_gravity="right"/>


                </FrameLayout>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dddddd"/>




            </androidx.appcompat.widget.LinearLayoutCompat>


            <!--Layer contente body-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="1200dp"
                android:background="#ffffff">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/email_login_form"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:gravity="center"
                            android:layout_marginBottom="35dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/name"
                                    app:hintAnimationEnabled="true"
                                    android:layout_marginTop="20dp">

                                    <EditText
                                        android:id="@+id/name"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="17sp"
                                        android:inputType="textEmailAddress"
                                        android:lines="1"
                                        android:maxLength="60"
                                        android:theme="@style/AppTheme.EditText.Black"/>

                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/surname"
                                    app:hintAnimationEnabled="true">

                                    <EditText
                                        android:id="@+id/surname"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="17sp"
                                        android:inputType="textEmailAddress"
                                        android:lines="1"
                                        android:maxLength="60"
                                        android:theme="@style/AppTheme.EditText.Black"/>


                                </com.google.android.material.textfield.TextInputLayout>


                                <LinearLayout
                                    android:baselineAligned="false"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center"
                                    android:weightSum="99">

                                    <com.google.android.material.textfield.TextInputLayout
                                        android:layout_weight="33"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/day"
                                        app:hintAnimationEnabled="true">

                                        <EditText
                                            android:id="@+id/day"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textSize="17sp"
                                            android:inputType="number"
                                            android:lines="1"
                                            android:maxLength="4"
                                            android:theme="@style/AppTheme.EditText.Black"/>

                                    </com.google.android.material.textfield.TextInputLayout>


                                    <com.google.android.material.textfield.TextInputLayout
                                        android:layout_weight="33"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/month"
                                        app:hintAnimationEnabled="true">

                                        <EditText
                                            android:id="@+id/month"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textSize="17sp"
                                            android:inputType="number"
                                            android:lines="1"
                                            android:maxLength="4"
                                            android:theme="@style/AppTheme.EditText.Black"/>

                                    </com.google.android.material.textfield.TextInputLayout>


                                    <com.google.android.material.textfield.TextInputLayout
                                        android:layout_weight="33"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/year"
                                        app:hintAnimationEnabled="true">


                                        <EditText
                                            android:id="@+id/year"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textSize="17sp"
                                            android:inputType="number"
                                            android:lines="1"
                                            android:maxLength="4"
                                            android:theme="@style/AppTheme.EditText.Black"/>

                                    </com.google.android.material.textfield.TextInputLayout>

                                </LinearLayout>



                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email"
                                    app:hintAnimationEnabled="true">

                                    <EditText
                                        android:id="@+id/email"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="17sp"
                                        android:inputType="textEmailAddress"
                                        android:lines="1"
                                        android:maxLength="60"
                                        android:theme="@style/AppTheme.EditText.Black"/>

                                </com.google.android.material.textfield.TextInputLayout>


                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/password">


                                    <EditText
                                        android:id="@+id/password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:inputType="textPassword"
                                        android:lines="1"
                                        android:maxLength="60"
                                        android:textSize="17sp"
                                        android:theme="@style/AppTheme.EditText.Black"/>

                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/password">


                                    <EditText
                                        android:id="@+id/password2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="17sp"
                                        android:inputType="textPassword"
                                        android:lines="1"
                                        android:maxLength="60"
                                        android:theme="@style/AppTheme.EditText.Black"/>

                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>


                        </FrameLayout>


                        <com.google.android.material.button.MaterialButton
                            android:layout_gravity="bottom|end"
                            android:layout_width="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:layout_marginEnd="30dp"
                            android:layout_height="wrap_content"
                            android:text="Modifica Profilo"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="17sp"/>



                    </LinearLayout>




                </ScrollView>





                <!--The content's body goes here-->



            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.keiken.view.backdrop.BackdropFrontLayer>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>










</FrameLayout>







